; ModuleID = '/home/carl/AnghaBench/git/t/helper/extr_test-config.c_iterate_cb.c'
source_filename = "/home/carl/AnghaBench/git/t/helper/extr_test-config.c_iterate_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@iterate_cb.nr = internal global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"key=%s\0A\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"value=%s\0A\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"(null)\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"origin=%s\0A\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"name=%s\0A\00", align 1
@.str.5 = private unnamed_addr constant [10 x i8] c"scope=%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @iterate_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iterate_cb(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* @iterate_cb.nr, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @iterate_cb.nr, align 4
  %9 = icmp ne i32 %7, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %3
  %11 = call i32 @putchar(i8 signext 10)
  br label %12

12:                                               ; preds = %10, %3
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* %13)
  %15 = load i8*, i8** %5, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %12
  %18 = load i8*, i8** %5, align 8
  br label %20

19:                                               ; preds = %12
  br label %20

20:                                               ; preds = %19, %17
  %21 = phi i8* [ %18, %17 ], [ getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), %19 ]
  %22 = call i32 @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i8* %21)
  %23 = call i8* (...) @current_config_origin_type()
  %24 = call i32 @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0), i8* %23)
  %25 = call i8* (...) @current_config_name()
  %26 = call i32 @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0), i8* %25)
  %27 = call i32 (...) @current_config_scope()
  %28 = call i8* @scope_name(i32 %27)
  %29 = call i32 @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.5, i64 0, i64 0), i8* %28)
  ret i32 0
}

declare dso_local i32 @putchar(i8 signext) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i8* @current_config_origin_type(...) #1

declare dso_local i8* @current_config_name(...) #1

declare dso_local i8* @scope_name(i32) #1

declare dso_local i32 @current_config_scope(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
